# covid_analyser

./: .env  .gitignore  Cargo.toml  config.toml
src/: main.rs
