[package]
authors = ["Michael Mezzina <michaelmez39@gmail.com>"]
edition = "2018"
name = "covid_analyser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
toml = "0.5.6"
plotters = "0.2.15"
serde = {version = "1.0.114", features = ["derive"]}
